replaced restTemplate with RabbitMQ, redid all tests